<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/dialog_rounded_corner"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/rounded_corner_dialog_header"
        android:fontFamily="@font/opensanssemibold"
        android:gravity="center"
        android:text="@string/select_payment_mode"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_18sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioGroup
            android:id="@+id/rgLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

            <RadioButton
                android:id="@+id/rbCOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:button="@null"
                android:drawableStart="@drawable/radio_button_selector"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/opensanssemibold"
                android:text="@string/cod"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <RadioButton
                android:id="@+id/rbPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:button="@null"
                android:drawableStart="@drawable/radio_button_selector"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/opensanssemibold"
                android:text="@string/pay_online"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />


        </RadioGroup>
    </LinearLayout>
</LinearLayout>