<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottom"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvBasket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/opensansbold"
            android:gravity="center"
            android:text="@string/no_data_found"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20sdp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:fontFamily="@font/opensansbold"
                android:text="@string/total"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:fontFamily="@font/opensansbold"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                tools:ignore="RtlCompat"
                tools:text="$100.12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnShopping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/btn_bg_keepshopping"
                    android:fontFamily="@font/opensansregular"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="@string/keep_shopping"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnCheckout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/btn_bg_checkout"
                    android:fontFamily="@font/opensansregular"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:text="@string/checkout"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id" />

    <include layout="@layout/layout_progressbar" />
</RelativeLayout>