<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_two">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottom"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/opensansbold"
                    android:gravity="center_vertical"
                    android:text="@string/promo_code"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15sdp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_3sdp"
                    android:elevation="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/edtPromoCode"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:backgroundTint="@color/colorWhite"
                            android:gravity="center"
                            android:hint="@string/enter_your_promo_code"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:maxLines="1"
                            android:padding="@dimen/_5sdp"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="#C7C7C7"
                            android:textSize="@dimen/_12sdp" />

                        <Button
                            android:id="@+id/btnApply"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:background="@drawable/btn_bg_apply"
                            android:fontFamily="@font/opensansbold"
                            android:text="@string/apply"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/llTotal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_3sdp"
                            android:fontFamily="@font/opensansbold"
                            android:gravity="center_vertical"
                            android:text="@string/your_order"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_15sdp" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvCheckout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:background="@android:color/transparent" />

                        <TextView
                            android:id="@+id/tvNoData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:fontFamily="@font/opensansbold"
                            android:gravity="center"
                            android:text="@string/no_data_found"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_20sdp"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="@dimen/_3sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/tvLabelSubTotal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensanssemibold"
                                android:gravity="center_vertical"
                                android:text="@string/subtotal"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:id="@+id/tvSubTotal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensanssemibold"
                                android:gravity="center_vertical"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_12sdp"
                                tools:text="$300.00" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/tvLabelTax"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensanssemibold"
                                android:gravity="center_vertical"
                                android:text="@string/tax"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:id="@+id/tvTax"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensanssemibold"
                                android:gravity="center_vertical"
                                android:text="$30.00"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llDiscount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/tvLabelDiscount"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensanssemibold"
                                android:gravity="center_vertical"
                                android:text="@string/discount"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:id="@+id/tvDiscount"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensanssemibold"
                                android:gravity="center_vertical"
                                android:text="$30.00"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="#C7C7C7" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/tvLabelTotal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensanssemibold"
                                android:gravity="center_vertical"
                                android:text="@string/total"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/_14sdp" />

                            <TextView
                                android:id="@+id/tvTotal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensanssemibold"
                                android:gravity="center_vertical"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/_14sdp"
                                tools:text="$330.00" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/btn_bg_checkout"
                android:fontFamily="@font/opensansextrabold"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/order_now"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

    </LinearLayout>

    <include layout="@layout/layout_progressbar" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id" />
</RelativeLayout>